<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fll.teamstorm.LauncherActivity"
    tools:ignore="MergeRootFrame"

    android:padding="20dp"
    android:orientation="vertical">


    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/view_safe_zones"
        android:id="@+id/map_button"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:background="@drawable/map_button"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"

        android:layout_marginTop="20dp" >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_kids"
            android:id="@+id/kids_button"

            android:layout_weight="1"
            android:background="@drawable/kids_button"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_teens"
            android:id="@+id/teens_button"
            android:layout_weight="1"
            android:background="@drawable/teens_button"
            android:layout_margin="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_adults"
            android:id="@+id/adults_button"
            android:layout_weight="1"
            android:background="@drawable/adults_button"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_seniors"
            android:id="@+id/seniors_button"
            android:layout_weight="1"
            android:background="@drawable/seniors_button"
            android:layout_margin="5dp" />
    </LinearLayout>


</LinearLayout>
