<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <!-- Monday -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_monday"
            android:id="@+id/dialog_hours_monday_label"
            android:textStyle="bold"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_hours_monday_open"
                android:inputType="time"
                android:editable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="till"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_hours_monday_close"
                android:inputType="time" />

        </LinearLayout>

        <!-- Tuesday -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_tuesday"
            android:id="@+id/dialog_hours_tuesday_label"
            android:textStyle="bold"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_hours_tuesday_open"
                android:inputType="time"
                android:enabled="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="till"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_hours_tuesday_close"
                android:inputType="time" />

        </LinearLayout>

        <!-- Wednesday -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_wednesday"
            android:id="@+id/dialog_hours_wednesday_label"
            android:textStyle="bold"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_hours_wednesday_open"
                android:inputType="time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="till"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_hours_wednesday_close"
                android:inputType="time" />

        </LinearLayout>

        <!-- Thursday -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_thursday"
            android:id="@+id/dialog_hours_thursday_label"
            android:textStyle="bold"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_hours_thursday_open"
                android:inputType="time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="till"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_hours_thursday_close"
                android:inputType="time" />

        </LinearLayout>

        <!-- Friday -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_friday"
            android:id="@+id/dialog_hours_friday_label"
            android:textStyle="bold"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_hours_friday_open"
                android:inputType="time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="till"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_hours_friday_close"
                android:inputType="time" />

        </LinearLayout>

        <!-- Saturday -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_saturday"
            android:id="@+id/dialog_hours_saturday_label"
            android:textStyle="bold"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_hours_saturday_open"
                android:inputType="time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="till"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_hours_saturday_close"
                android:inputType="time" />

        </LinearLayout>

        <!-- Sunday -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_sunday"
            android:id="@+id/dialog_hours_sunday_label"
            android:textStyle="bold"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_hours_sunday_open"
                android:inputType="time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="till"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/dialog_hours_sunday_close"
                android:inputType="time" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>